# deepbookv3

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  BACKFILL_PERFORMANCE_BENCHMARK.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PREDICT_MIGRATION.md  PREDICT_ORACLE_REVIEW_SCRATCHPAD.md  PR_DESCRIPTION.md  README.md  SECURITY.md  WALRUS_BACKFILL_IMPLEMENTATION_PLAN.md  WALRUS_BATCH_CHECKPOINT_FEASIBILITY.md  WALRUS_BATCH_FEASIBILITY_SUMMARY.md  WALRUS_CHECKPOINT_FEASIBILITY.md  WALRUS_CLI_INTEGRATION_PLAN.md  WALRUS_DOWNLOADER_GUIDE.md  WALRUS_FEASIBILITY_SUMMARY.md  WALRUS_IMPLEMENTATION_PROGRESS.md  WALRUS_IMPLEMENTATION_STATUS.md  WALRUS_IMPLEMENTATION_SUMMARY.md  check_bids.js  check_pkg.js  check_usdc_pools.js  deepbook_state.json  deepbook_v3_state.json  docker-compose.predict.yml  fill_handler.ru  find_all_predict.js  find_circle_usdc_pool.js  find_deep_events.js  find_deep_pool.js  find_dusdc_events.js  find_dusdc_events_v2.js  find_dusdc_pool_event.js  find_dusdc_pool_v2.js  find_dusdc_pool_v3.js  (+29 more)
crates/bench/: Cargo.toml  README.md  grafana-dashboard.json
crates/bench/src/: api.rs  config.rs  main.rs  metrics.rs  queue.rs  runner.rs  store.rs
crates/incentives/: Cargo.toml  README.md
crates/incentives/src/: data_validation.rs  dry_run.rs  lib.rs  main.rs  pool_info.rs  scoring.rs  types.rs
crates/indexer/: Cargo.toml  README.md  deepbook-indexer-openapi.yaml
crates/indexer/src/: checkpoint_storage.rs  checkpoint_storage_config.rs  lib.rs  main.rs  materialized_view_refresh.rs  models.rs  net_deposits_refresh.rs  sandbox.rs  traits.rs  walrus_storage.rs
crates/indexer/src/handlers/: asset_supplied_handler.rs  asset_withdrawn_handler.rs  balance_manager_event_handler.rs  balances_handler.rs  book_params_updated_handler.rs  conditional_order_added_handler.rs  conditional_order_cancelled_handler.rs  conditional_order_executed_handler.rs  conditional_order_insufficient_funds_handler.rs  current_price_updated_handler.rs  deep_burned_handler.rs  deepbook_pool_config_updated_handler.rs  deepbook_pool_registered_handler.rs  deepbook_pool_updated_handler.rs  deepbook_pool_updated_registry_handler.rs  deepbook_referral_created_event_handler.rs  deepbook_referral_set_event_handler.rs  deposit_collateral_handler.rs  ewma_update_handler.rs  flash_loan_handler.rs  interest_params_updated_handler.rs  liquidation_handler.rs  loan_borrowed_handler.rs  loan_repaid_handler.rs  maintainer_cap_updated_handler.rs  maintainer_fees_withdrawn_handler.rs  maker_incentive_epoch_results_submitted_handler.rs  maker_incentive_fund_created_handler.rs  maker_incentive_params_applied_handler.rs  maker_incentive_params_cancelled_handler.rs  maker_incentive_params_scheduled_handler.rs  maker_incentive_reward_claimed_handler.rs  maker_incentive_treasury_withdrawn_handler.rs  margin_fees_handler.rs  margin_manager_created_handler.rs  margin_manager_operations_handler.rs  margin_pool_admin_handler.rs  margin_pool_config_updated_handler.rs  margin_pool_created_handler.rs  margin_pool_operations_handler.rs  (+24 more)
crates/indexer/tests/: README.md  snapshot_tests.rs
crates/indexer/tests/snapshots/: .snapshot_tests__deep_burned__deep_burned.snap.swp  snapshot_tests__asset_supplied__asset_supplied.snap  snapshot_tests__asset_withdrawn__asset_withdrawn.snap  snapshot_tests__balance_manager_created__balance_manager_created.snap  snapshot_tests__balances__balances.snap  snapshot_tests__balances_indirect__balances.snap  snapshot_tests__book_params_updated__book_params_updated.snap  snapshot_tests__conditional_order_added__conditional_order_added.snap  snapshot_tests__conditional_order_added__conditional_order_events.snap  snapshot_tests__conditional_order_cancelled__conditional_order_cancelled.snap  snapshot_tests__conditional_order_cancelled__conditional_order_events.snap  snapshot_tests__current_price_updated__current_price_updated.snap  snapshot_tests__deep_burned__deep_burned.snap  snapshot_tests__deepbook_pool_registered__deepbook_pool_registered.snap  snapshot_tests__deepbook_pool_updated__deepbook_pool_updated.snap  snapshot_tests__deepbook_pool_updated_registry__deepbook_pool_updated_registry.snap  snapshot_tests__deepbook_referral_created__deepbook_referral_created.snap  snapshot_tests__deepbook_referral_set__deepbook_referral_set.snap  snapshot_tests__deposit_collateral__collateral_events.snap  snapshot_tests__deposit_collateral__deposit_collateral.snap  snapshot_tests__ewma_updates__ewma_updates.snap  snapshot_tests__flash_loans__flashloans.snap  snapshot_tests__liquidation__liquidation.snap  snapshot_tests__loan_borrowed__loan_borrowed.snap  (+17 more)
crates/oracle-indexer/: Cargo.toml
crates/oracle-indexer/src/: lib.rs  main.rs  materialized_view_refresh.rs  meta.rs  models.rs  traits.rs
crates/oracle-schema/: Cargo.toml
crates/oracle-schema/src/: models.rs  schema.rs
crates/oracle-schema/tests/: schema_boundary_tests.rs
crates/predict-indexer/: Cargo.toml
crates/predict-indexer/src/: handlers.rs  lib.rs  main.rs  materialized_view_refresh.rs  meta.rs  models.rs  order_id.rs  traits.rs
crates/predict-indexer/tests/: decode_map_tests.rs  order_state_tests.rs  snapshot_tests.rs
crates/predict-schema/: Cargo.toml
crates/predict-schema/src/: lib.rs  models.rs  schema.rs
crates/predict-schema/tests/: schema_boundary_tests.rs
crates/predict-server/: API.md  Cargo.toml
crates/predict-server/src/: error.rs  lib.rs  main.rs  metrics.rs  reader.rs  server.rs
crates/predict-server/tests/: endpoint_tests.rs
crates/schema/: Cargo.toml
crates/schema/docs/: pg_cron.md
crates/schema/src/: models.rs  schema.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: error.rs  grpc.rs  lib.rs  live_ohclv.rs  main.rs  models.rs  postgres_manager.rs  pyth.rs  reader.rs  schema.rs  server.rs  writer.rs
crates/server/tests/: live_ohclv_endpoint_tests.rs  live_ohclv_tests.rs  sui_client_tests.rs
scripts/rust/: Cargo.toml
scripts/rust/examples/: create_balance_manager.rs  deposit.rs  place_limit_order.rs
scripts/rust/src/: constants.rs  lib.rs  sui_utils.rs
(+697 files in other folders)
