[workspace]
resolver = "2"

members = [
    "crates/indexer",
    "crates/schema",
    "crates/server",
]

[workspace.dependencies]
tokio = "1.47.1"
serde = "1.0.217"
serde_json = "1.0.138"
diesel = "2.2.12"
diesel-async = "0.5.2"
diesel_migrations = "2.2.0"
anyhow = "1.0.98"
tracing = "0.1.41"
clap = "4.5.31"
async-trait = "0.1.83"
bcs = "0.1.6"
url = "2.5.4"
prometheus = "0.13.4"

sui-futures = { git = "https://github.com/MystenLabs/sui.git", rev = "a14d9e8ddadfcea837de46b43d0b72a289320afb" }
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "a14d9e8ddadfcea837de46b43d0b72a289320afb" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "a14d9e8ddadfcea837de46b43d0b72a289320afb" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "a14d9e8ddadfcea837de46b43d0b72a289320afb" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "a14d9e8ddadfcea837de46b43d0b72a289320afb" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "a14d9e8ddadfcea837de46b43d0b72a289320afb" }
