[package]
name = "predict-bench"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["env", "derive"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
prometheus.workspace = true
tracing.workspace = true
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
subtle = "2.5"
tracing-subscriber = "0.3"
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[[bin]]
name = "predict-bench"
path = "src/main.rs"
