[package]
name = "deepbook-incentives"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bcs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }

axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
hex = "0.4"
chrono = "0.4"
tracing-subscriber = "0.3"

# Nautilus TEE attestation — only needed inside the enclave
serde_bytes = { version = "0.11", optional = true }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package = "aws-nitro-enclaves-nsm-api", optional = true }

[features]
default = []
nautilus = ["dep:nsm_api", "dep:serde_bytes"]

[[bin]]
name = "deepbook-incentives"
path = "src/main.rs"

[[bin]]
name = "incentives-dry-run"
path = "src/dry_run.rs"
