[package]
name = "deepbook-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio.workspace = true
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "7f1b81169e966fc1af6e3cbb1a3180fb577af075" }
move-binding-derive = { path = "../../../move-binding/move-binding-derive" }
move-types = { path = "../../../move-binding/move-types" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = [
    "serde",
], rev = "f0c8068" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "f0c8068" }
clap = { workspace = true, features = ["env"] }
diesel = { workspace = true, features = [
    "postgres",
    "uuid",
    "chrono",
    "serde_json",
    "numeric",
] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tracing.workspace = true
async-trait.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json = { workspace = true }
anyhow.workspace = true
url.workspace = true

sui-pg-db.workspace = true
prometheus.workspace = true
sui-indexer-alt-metrics.workspace = true
sui-types.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true
tokio-util.workspace = true

deepbook-schema = { path = "../schema" }
paste = "1.0"


[dev-dependencies]
sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "7f1b81169e966fc1af6e3cbb1a3180fb577af075" }
insta = { version = "1.43.1", features = ["json"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
chrono = "0.4.39"

[[bin]]
name = "deepbook-indexer"
path = "src/main.rs"
