[package]
name = "deepbook-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio.workspace = true
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "a0545a819fba114903c880f928339b5cd8805a4a" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "048124e484f14b9bf2a402227c9bc255c7621bc1" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "048124e484f14b9bf2a402227c9bc255c7621bc1" }
clap = { workspace = true, features = ["env"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
hex = "0.4"
tracing.workspace = true
async-trait.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json = { workspace = true }
anyhow.workspace = true
url.workspace = true

sui-pg-db.workspace = true
prometheus.workspace = true
sui-indexer-alt-metrics.workspace = true
sui-types.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true
tokio-util.workspace = true

deepbook-schema = { path = "../schema" }

[dev-dependencies]
sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "a0545a819fba114903c880f928339b5cd8805a4a" }
insta = { version = "1.43.1", features = ["json"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
chrono = "0.4.39"

[[bin]]
name = "deepbook-indexer"
path = "src/main.rs"

