[package]
name = "oracle-schema"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations.workspace = true
serde = { workspace = true }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = "0.4"
