[package]
name = "deepbook-schema"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "a0545a819fba114903c880f928339b5cd8805a4a"}
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.27.1"
strum_macros = "0.27.1"
bigdecimal = "0.4"
chrono = "0.4"
