[package]
name = "deepbook-schema"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "9346405a6b45d232f73d2ec050846fe9aa5081be"}
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.27.1"
strum_macros = "0.27.1"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = "0.4"
