[package]
name = "deepbook-server"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
deepbook-schema = { path = "../schema" }
tokio.workspace = true
futures = "0.3.31"
clap = { workspace = true, features = ["env"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
bcs.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
prometheus.workspace = true
sui-futures.workspace = true
sui-types.workspace = true
sui-indexer-alt-metrics.workspace = true
telemetry-subscribers.workspace = true
axum = { version = "0.7", features = ["json"] }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-pg-db.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
bigdecimal = "0.4.9"
chrono = "0.4.42"
thiserror = "1.0"
tokio-util = "0.7"
subtle = "2.5"
tracing.workspace = true
governor = "0.6"
secrecy = "0.8"

[[bin]]
name = "deepbook-server"
path = "src/main.rs"
