[package]
name = "deepbook-server"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
deepbook-schema = { path = "../schema" }
tokio.workspace = true
futures = "0.3.31"
clap = { workspace = true, features = ["env"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
bcs.workspace = true
anyhow.workspace = true
moka = { version = "0.12", features = ["future"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
prometheus.workspace = true
sui-futures.workspace = true
sui-indexer-alt-metrics.workspace = true
telemetry-subscribers.workspace = true
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sui-pg-db.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
sui-rpc = "0.3.1"
sui-sdk-types = "0.3.1"
sui-transaction-builder = "0.3.1"
tonic = "0.14"
bigdecimal = "0.4.9"
chrono = "0.4.42"
thiserror = "1.0"
tokio-util = "0.7"
subtle = "2.5"
tracing.workspace = true
governor = "0.6"
secrecy = "0.8"

[[bin]]
name = "deepbook-server"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
